add rolled over index filter refs #13
